--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,6 +19,9 @@
         <li id="characters-nav">
           <%= link_to "Characters", :characters %>
         </li>
+         <li id="characters-nav">
+          <%= link_to "Figures", :figures %>
+        </li>
       </ul>
     </div>
   </div>
