--- a/app/views/figures/index.html.erb
+++ b/app/views/figures/index.html.erb
@@ -2,25 +2,29 @@
 
 <h1>Listing Figures</h1>
 
-<table>
+<table class="flat-table container">
   <thead>
-    <tr>
-      <th>Characted</th>
-      <th>Name</th>
-      <th>Release date</th>
-      <th colspan="3"></th>
+    <tr class="row">
+      <th class="col-md-3">Character</th>
+      <th class="col-md-3">Name</th>
+      <th class="col-md-3">Release date</th>
+      <th class="col-md-3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @figures.each do |figure| %>
-      <tr>
-        <td><%= figure.character_id %></td>
-        <td><%= figure.name %></td>
-        <td><%= figure.release_date %></td>
-        <td><%= link_to 'Show', figure %></td>
-        <td><%= link_to 'Edit', edit_figure_path(figure) %></td>
-        <td><%= link_to 'Destroy', figure, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <tr class="row">
+        <td class="col-md-3"><%= Character.find(figure.character_id).name %></td>
+        <td class="col-md-3"><%= figure.name %></td>
+        <td class="col-md-3"><%= figure.release_date %></td>
+        <td class="col-md-3">
+          <div class="row">
+            <span class="col-md-4"><%= link_to 'Show', figure %></span>
+            <span class="col-md-4"><%= link_to 'Edit', edit_figure_path(figure) %></span>
+            <span class="col-md-4 destroy"><%= link_to 'Destroy', figure, method: :delete, data: { confirm: 'Are you sure?' } %></span>
+          </div>
+        </td>
       </tr>
     <% end %>
   </tbody>
