--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Comics-To-Go</a>
+      <a class="navbar-brand" href="/#">Comics-To-Go</a>
     </div>
 
     <div class="collapse navbar-collapse" id="nav-elements">
