--- a/app/views/figures/index.html.erb
+++ b/app/views/figures/index.html.erb
@@ -2,10 +2,17 @@
 
 <h1>Listing Figures</h1>
 
+<%= form_tag figures_path, method: 'get', id: 'figures_search' do %>
+  <p>
+    <%= text_field_tag :search, params[:search] %>
+    <%= submit_tag 'Search', name: nil %>
+  </p>
+<% end %>
+
 <table class="flat-table container">
   <thead>
     <tr class="row">
-      <th class="col-md-3">Character</th>
+      <th class="col-md-3">Character <span class="glyphicon glyphicon-triangle-top"></span></th>
       <th class="col-md-3">Name</th>
       <th class="col-md-3">Release date</th>
       <th class="col-md-3"></th>
