--- a/app/views/figures/index.html.erb
+++ b/app/views/figures/index.html.erb
@@ -12,7 +12,7 @@
 <table class="flat-table container">
   <thead>
     <tr class="row">
-      <th class="col-md-3">Character <span class="glyphicon glyphicon-triangle-top"></span></th>
+      <th class="col-md-3">Character <div id="sorting-icons-container"><span class="sorting-up glyphicon glyphicon-chevron-up"></span><span class="sorting-down glyphicon glyphicon-chevron-down"></div></th>
       <th class="col-md-3">Name</th>
       <th class="col-md-3">Release date</th>
       <th class="col-md-3"></th>
@@ -22,7 +22,7 @@
   <tbody>
     <% @figures.each do |figure| %>
       <tr class="row">
-        <td class="col-md-3"><%= Character.find(figure.character_id).name %></td>
+        <td class="col-md-3"><%= Character.find(figure.character_id).name %></span></td>
         <td class="col-md-3"><%= figure.name %></td>
         <td class="col-md-3"><%= figure.release_date %></td>
         <td class="col-md-3">
