--- a/app/assets/javascripts/index.js.erb
+++ b/app/assets/javascripts/index.js.erb
@@ -1,5 +1,11 @@
-$(function() {
-  $('th:contains("Character")').on('click', function() {
-    alert('patito');
+$(document).on('page:change', function() {
+  $('span.sorting-up').on('click', function() {
+    $('span.sorting-down').removeClass('glyphicon glyphicon-chevron-down');
+    $('span.sorting-up').addClass('active');
+  });
+
+  $('span.sorting-up.active').on('click', function() {
+    $('span.sorting-down').addClass('glyphicon glyphicon-chevron-down');
+    $('span.sorting-up').removeClass('active');
   });
 });
