--- a/app/views/figures/index.html.erb
+++ b/app/views/figures/index.html.erb
@@ -12,9 +12,14 @@
 <table class="flat-table container">
   <thead>
     <tr class="row">
-      <th class="col-md-3">Character <div id="sorting-icons-container"><span class="sorting-up glyphicon glyphicon-chevron-up"></span><span class="sorting-down glyphicon glyphicon-chevron-down"></div></th>
-      <th class="col-md-3">Name</th>
-      <th class="col-md-3">Release date</th>
+      <% $figure_headers.each_with_index do |header, index| %>
+        <th class="col-md-3"><%= header %>
+          <div id="sorting-icons-container">
+            <span id='arrow-up-<%= index %>' class="sorting-up glyphicon glyphicon-chevron-up"></span>
+            <span class="sorting-down glyphicon glyphicon-chevron-down">
+          </div>
+        </th>
+      <% end %>
       <th class="col-md-3"></th>
     </tr>
   </thead>
