--- a/app/views/figures/index.html.erb
+++ b/app/views/figures/index.html.erb
@@ -13,11 +13,11 @@
   <thead>
     <tr class="row">
       <% $figure_headers.each_with_index do |header, index| %>
-        <th class="col-md-3"><%= header %>
-          <div id="sorting-icons-container">
+        <th class="col-md-3"><%=sortable header %>
+          <!-- <div id="sorting-icons-container">
             <span id='arrow-up-<%= index %>' class="sorting-up glyphicon glyphicon-chevron-up"></span>
             <span class="sorting-down glyphicon glyphicon-chevron-down">
-          </div>
+          </div> -->
         </th>
       <% end %>
       <th class="col-md-3"></th>
