table sorting with ajax in progress

--- a/app/views/figures/index.html.erb
+++ b/app/views/figures/index.html.erb
@@ -24,21 +24,8 @@
     </tr>
   </thead>
 
-  <tbody>
-    <% @figures.each do |figure| %>
-      <tr class="row">
-        <td class="col-md-3"><%= Character.find(figure.character_id).name %></span></td>
-        <td class="col-md-3"><%= figure.name %></td>
-        <td class="col-md-3"><%= figure.release_date %></td>
-        <td class="col-md-3">
-          <div class="row">
-            <span class="col-md-4"><%= link_to 'Show', figure %></span>
-            <span class="col-md-4"><%= link_to 'Edit', edit_figure_path(figure) %></span>
-            <span class="col-md-4 destroy"><%= link_to 'Destroy', figure, method: :delete, data: { confirm: 'Are you sure?' } %></span>
-          </div>
-        </td>
-      </tr>
-    <% end %>
+  <tbody id='figures-table'>
+    <%= render partial: 'figures_content_table', locals: {figures: @figures} %>
   </tbody>
 </table>
 
