changes on the javascript view for the table

--- a/app/views/figures/sorted_table.js.erb
+++ b/app/views/figures/sorted_table.js.erb
@@ -1,1 +1,1 @@
-$('#figures.table').html("<%= j render partial: 'figures_content_table', locals: {figures: @figures} %>")
+$('#figures-table').html("<%= j render partial: 'figures_content_table', locals: {figures: @figures} %>")
